--- a/manifest.json
+++ b/manifest.json
@@ -20,7 +20,7 @@
   "web_accessible_resources": [
     {
       "resources": [
-        "assets/icons/icon.png", 
+        "assets/icons/*", 
         "views/offscreen.html", 
         "assets/audio/hold.mp3", 
         "assets/audio/release.mp3"
